<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/begin_title"
        android:textSize="25sp"
        android:textColor="@color/titleColor"/>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/listGray" />
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="beginning"
        android:background="@color/titleColor"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/warning_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/warning_text"/>

        <Button
            android:id="@+id/begin_btu"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:background="@drawable/shape_button_item"
            android:text="@string/begin_text"/>
    </LinearLayout>

</LinearLayout>
