<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/preview_title"
            android:textSize="25sp"
            android:textColor="@color/titleColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <VideoView
                android:id="@+id/video_preview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/prompt_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="精液特征"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="left|center_horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="颜色："
                        android:textSize="18sp" />

                   <Spinner
                       android:id="@+id/spinner"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="left|center_horizontal"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="精液量："
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/outsetVolume"
                        android:inputType="number"
                        android:hint="单位为毫升"
                        android:text="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="left|center_horizontal"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="禁欲时长："
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/outsetTime"
                        android:inputType="number"
                        android:hint="单位为天"
                        android:text="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/confirm_btu"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_circle_green"
                    android:text="@string/start"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>